--- a/practice.html
+++ b/practice.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-sm navbar-light">
         <!-- Container wrapper -->
         <div class="container-fluid">
             <!-- Collapsible wrapper -->
@@ -42,17 +42,17 @@
         </div>
         <!-- Container wrapper -->
     </nav>
+    <div class="content">
 
+        <div class=container id=homepage_form>
 
-    <div class=container id=homepage_form>
-    
-        <form action="/newaccount " method=post
-            oninput='password2.setCustomValidity(password2.value != password.value ? "Passwords do not match. " : " ")'
-            class="signup_form ">
-            <img id="logo" src="public/img/tojam.jpg" alt="to jam logo">
-            <h3 class=" text-center "> Sign up to Tojam BnB</h3>
-            <div class="needs-validation " novalidate>
-                <!-- <div class="col-md-10 "> -->
+            <form action="/newaccount " method=post
+                oninput='password2.setCustomValidity(password2.value != password.value ? "Passwords do not match. " : " ")'
+                class="signup_form ">
+                <img id="logo" src="public/img/tojam.jpg" alt="to jam logo">
+                <h3 class=" text-center "> Sign up to Tojam BnB</h3>
+                <div class="needs-validation " novalidate>
+                    <!-- <div class="col-md-10 "> -->
                     <label for="validationCustom01 " class="form-label ">First name</label>
                     <input type="text " name="first_name " class="form-control " id="validationCustom01 "
                         placeholder="First name " required>
@@ -88,15 +88,15 @@
                     </label>
 
 
-                    <div class="submitBtn">
-                        <button class="btn " type="submit ">Sign up</button>
+                    <div class=".btnContainer" >
+                        <button class="btn" type="submit ">Sign up</button>
                     </div>
 
-                <!-- </div> -->
-            </div>
-        </form>
+                    <!-- </div> -->
+                </div>
+            </form>
+        </div>
     </div>
-
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js "
