--- a/practice.html
+++ b/practice.html
@@ -22,7 +22,7 @@
                 <!-- Left links -->
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/">Welcome</a>
+                        <a class="nav-link" aria-current="page">Welcome</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Login</a>
