--- a/practice_login.html
+++ b/practice_login.html
@@ -14,14 +14,11 @@
 
 <body>
   <nav class="navbar navbar-expand-sm navbar-light">
-    <!-- Container wrapper -->
     <div class="container-fluid">
-      <!-- Collapsible wrapper -->
       <div class="collapse navbar-collapse" id="navbarRightAlignExample">
-        <!-- Left links -->
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/">Welcome</a>
+            <a class="nav-link" aria-current="page">Welcome</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/login">Login</a>
@@ -29,22 +26,15 @@
           <li class="nav-item">
             <a class="nav-link" href="/">Sign Up</a>
           </li>
-          <!-- <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"
-                  >Disabled</a
-                >
-              </li> -->
         </ul>
-        <!-- Left links -->
       </div>
-      <!-- Collapsible wrapper -->
     </div>
-    <!-- Container wrapper -->
   </nav>
+
+
   <div class="container" id="signin-containter">
-    <form action=" ?????" method=get class="login_form">
+    <form action="/spaces" method=get class="login_form">
       <h3 class=" text-center "> Login</h3>
-      <!-- wask guys where this form is going cos??? -->
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
